@@ -1,3 +1,8 @@
+2010-12-14  Andrew Cohen  <cohen@andy.bu.edu>
+
+	* nnir.el (nnir-mode): Don't install registry hooks if user hasn't
+	installed the registry.
+
 2010-12-13  Andrew Cohen  <cohen@andy.bu.edu>
 
 	* nnir.el (nnir-run-gmane): Better check for gmane groups: error out if
